--- a/1660454-1660553_QuanLyNhaSach/1660454-1660553_QuanLyNhaSach.csproj
+++ b/1660454-1660553_QuanLyNhaSach/1660454-1660553_QuanLyNhaSach.csproj
@@ -49,16 +49,25 @@
   <ItemGroup>
     <Compile Include="DAO\AccountDAO.cs" />
     <Compile Include="DAO\CategoryDAO.cs" />
+    <Compile Include="DAO\ClientDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\ItemsDAO.cs" />
     <Compile Include="DTO\Account.cs" />
     <Compile Include="DTO\Category.cs" />
+    <Compile Include="DTO\Client.cs" />
     <Compile Include="DTO\Items.cs" />
+    <Compile Include="DTO\POS.cs" />
     <Compile Include="fAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="fAdmin.Designer.cs">
       <DependentUpon>fAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fDiscount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fDiscount.Designer.cs">
+      <DependentUpon>fDiscount.cs</DependentUpon>
     </Compile>
     <Compile Include="fImportDetail.cs">
       <SubType>Form</SubType>
@@ -95,6 +104,9 @@
     <Compile Include="Session.cs" />
     <EmbeddedResource Include="fAdmin.resx">
       <DependentUpon>fAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fDiscount.resx">
+      <DependentUpon>fDiscount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fImportDetail.resx">
       <DependentUpon>fImportDetail.cs</DependentUpon>
