--- a/1660454-1660553_QuanLyNhaSach/1660454-1660553_QuanLyNhaSach.csproj
+++ b/1660454-1660553_QuanLyNhaSach/1660454-1660553_QuanLyNhaSach.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>D:\Downloads\mysql-connector-net-6.10.9-noinstall\v4.5.2\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
